[package]
name = "rusky-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
rusky-core-macros = { path = "../rusky-core-macros" }
tracing = "0.1.29"
tokio = { version = "1", features = ["rt-multi-thread", "macros"]}

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "unstable_discord_api"
]
version = "0.10"
