[package]
name = "rusky-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10", features = ["toml", "env", "json", "yaml"] }
serde   = { version = "1.0", features = ["derive"] }
dotenv  = "0.15"
tracing = "0.1.28"
